# Talotekniikka-IoT

./: LICENSE  README.md
MQTT-Arduino_Mega/: LICENSE  MQTT1.4_mega.ino  MQTT1.4_mega.ino.ino  MQTT1.5_mega.ino
MQTT1.4_mega/: MQTT1.4_mega.ino
kaspos/: CMakeLists.txt  LICENSE  README.md  config.cfg
kaspos/include/: dataloop.h  gettime.h  globals.h  mqtt.h  readdata.h  senddata.h  statecheck.h  wapice.h
kaspos/src/: CMakeLists.txt  dataloop.cpp  gettime.cpp  globals.cpp  main.cpp  mqtt.cpp  readdata.cpp  senddata.cpp  statecheck.cpp  wapice.cpp
